<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewIndividualContact">

    <ImageView
        android:id="@+id/vsLogo"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/vs_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/small_vs_logo" />

    <TextView
        android:id="@+id/viewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vsLogo"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/viewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myCompany"
        app:layout_constraintBottom_toTopOf="@+id/viewAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewName" />

    <TextView
        android:id="@+id/viewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myAddress"
        app:layout_constraintBottom_toTopOf="@+id/viewNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCompany" />

    <TextView
        android:id="@+id/viewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myNumber"
        app:layout_constraintBottom_toTopOf="@+id/viewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAddress" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myEmail"
        app:layout_constraintBottom_toTopOf="@+id/indiContactReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNumber" />

    <Button
        android:id="@+id/indiContactReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>