<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <ImageView
        android:id="@+id/VSlogo"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/vs_logo"
        app:layout_constraintBottom_toTopOf="@+id/myCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/small_vs_logo" />

    <TextView
        android:id="@+id/myCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_virtual_card"
        app:layout_constraintBottom_toTopOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33999997" />

    <Button
        android:id="@+id/presentBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/present_my_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBtn"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/scan_foreign_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentBtn"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/contactsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/see_all_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanBtn"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/myCardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toTopOf="@+id/editBtn"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/myCardCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myCompany"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/myCardName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/myCardEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myEmail"
        app:layout_constraintBottom_toBottomOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toTopOf="@+id/editBtn"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/myCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myNumber"
        app:layout_constraintBottom_toBottomOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/myCardEmail"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/myCardAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler_myAddress"
        app:layout_constraintBottom_toTopOf="@+id/myCardNumber"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/myCardEmail"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>