<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/createBtn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:backgroundTint="#009688"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/VSLogo"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/vs_logo"
        app:layout_constraintBottom_toBottomOf="@+id/createBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/small_vs_logo" />

    <EditText
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/filler_myname"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/myCompany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VSLogo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/myCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/filler_myCompany"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/myAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/myAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/filler_myAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/myPersPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCompany"
        android:autofillHints="" />

    <EditText
        android:id="@+id/myPersPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textShortMessage|textPersonName"
        android:text="@string/filler_myNumber"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/myEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myAddress" />

    <EditText
        android:id="@+id/myEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/filler_myEmail"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/createBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPersPhone"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>